tests/baselines/reference/contextualTypingOfObjectLiterals2.errors.txt
contextualTypingOfObjectLiterals2.ts(5,18): error TS2339: Property 'hmm' does not exist on type 'string'.


==== contextualTypingOfObjectLiterals2.ts (1 errors) ====
    interface Foo {
        foo: (t: string) => string;
    }
    function f2(args: Foo) { }
    f2({ foo: s => s.hmm }) // 's' should be 'string', so this should be an error
                     ~~~
!!! error TS2339: Property 'hmm' does not exist on type 'string'.